--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -38,7 +38,7 @@ Puruto **no incluye** un agente ni un modelo LLM. Para usar comandos como `/init
     Basado en el formato **SKILL.md**, adoptado por Claude Code, Gemini CLI, Codex y Windsurf desde diciembre 2025. Escríbelo una vez, ejecútalo en cualquier agente.
   </Card>
   <Card title="Ecosistema local" icon="laptop">
-    Todo vive en `~/purutos/`. Sin cloud, sin subscripciones. Tus datos, tu máquina, tus reglas.
+    Todo vive en `~/purutos/`. Puruto en sí no depende de cloud (aunque el agente/runner que uses puede requerir red o un plan de pago). Tus datos, tu máquina, tus reglas.
   </Card>
   <Card title="Generador incluido" icon="rocket">
     Un comando crea un repo Puruto completo: `CLAUDE.md`, `agent.md`, 4 skills base, `.env.example` y README — todo funcional desde el primer momento.
